name:                Functoid
version:             0.1.0.0
synopsis:            Functoid is a 2-dimensional fungeoid based on lambda calculus.
homepage:            https://github.com/bforte/Functoid#README.md
license:             BSD3
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/bforte/Functoid

executable functoid
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Eval
                     , LambdaCalc
                     , Parser
                     , Types
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  ghc-options:         -Wunused-imports -Wunused-matches -Wincomplete-patterns -O2 -threaded
  build-depends:       array
                     , base >= 4.7 && < 5
                     , lens
                     , mtl
                     , parsec
                     , random

test-suite functoid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  main-is:             Spec.hs
  other-modules:       LambdaCalc
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
  build-depends:       base >= 4.7 && < 5
