name:                Lambdoid
version:             0.1.0.0
synopsis:            2D-language based on lambda calculus; inspired by Befunge
homepage:            https://github.com/bforte/Lambdoid
license:             BSD3
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Lambdoid
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Eval
                     , LambdaCalc
                     , Parser
                     , Types
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  ghc-options:         -Wunused-imports -Wunused-matches -Wincomplete-patterns -O2 -threaded
  build-depends:       array
                     , base >= 4.7 && < 5
                     , lens
                     , mtl
                     , parsec
                     , random
                     , template-haskell
